--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,7 +42,7 @@ nav {
   width: 100%;
   font-size: 18px;
   font-weight: bold;
-  background-color: #26359a;
+  background-color: ;
   color: #fff;
 }
 
@@ -59,7 +59,7 @@ nav ul li {
 
 nav a {
   text-decoration: none;
-  color: skyblue;
+  color: hotpink;
 }
 
 nav a:hover,
@@ -68,7 +68,7 @@ nav a:visited:hover {
 }
 
 nav a:visited {
-  color: pink;
+  color: hotpink;
 }
 
 .box {
